infra/kubernetes/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: saas
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: http
